init: update html file 2

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Islam Uzakpai</title>
@@ -12,7 +12,7 @@
         <li>E-mail: iuzakbayy@gmail.com</li>
         <li>Telegram: <a href="https://t.me/islamuzakpai">islamuzakpai</a></li>
         <li>Instagram: <a href="https://www.instagram.com/islam.uzaqbai/">islamuzaqpai</a></li>
-        <li>Git Hub: <a href="https://github.com/islamuzaqpai">islamuzaqpai</a></li>
+        <li>GitHub: <a href="https://github.com/islamuzaqpai">islamuzaqpai</a></li>
         <li>Discord: islamuzaqpai</li>
     </ul>
     <h2>About me</h2>
@@ -41,7 +41,7 @@
         System.out.println(a); // should print 0
     }
     public static int makeNegative(final int x) {
-        if (x > 0) {
+        if (x &gt; 0) {
             return -x;
         } else {
             return x;
