init: update html file 4

--- a/index.html
+++ b/index.html
@@ -17,12 +17,7 @@
     </ul>
     <h2>About me</h2>
     <p>
-        My name is Islam and I am 17 years old. 
-        I was born in Podstepnoye, in West Kazakhstan, 
-        and now I study at Narxoz University in Almaty. 
-        This year, I finished my first year of study and in the future, 
-        I want to become a software developer. RS School will help me with that.
-        My dream is to create my own startup and make a difference in our country. 
+        My name is Islam and I am 17 years old. I was born in Podstepnoye, in West Kazakhstan, and now I study at Narxoz University in Almaty. This year, I finished my first year of study and in the future, I want to become a software developer. RS School will help me with that. My dream is to create my own startup and make a difference in our country.
     </p>
     <h2>Skills</h2>
     <ul>
