init: update index file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Islam Uzakpai</h1>
-    <a href="https://iimg.su/i/hVMEC"><img src="https://iimg.su/s/07/GS2NX4w2oe4lQkKNSTW2wJyYXQxH0wYaAXxlqkA1.png" width="300px" height="400px"></a>
+    <a href="https://iimg.su/i/hVMEC"><img src="https://iimg.su/s/07/GS2NX4w2oe4lQkKNSTW2wJyYXQxH0wYaAXxlqkA1.png" width="300px" height="400px" alt="Islam Uzakpai"></a>
     <h2>Contacts:</h2>
     <ul>
         <li>E-mail: iuzakbayy@gmail.com</li>
